--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "homepage": "http://toufikabyle.github.io/subtlegreen",
+  "name": "subtlegreen",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -9,14 +13,19 @@
   },
   "dependencies": {
     "expo": "~41.0.1",
+    "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-shadow": "^1.2.2",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "gh-pages": "^3.1.0"
   },
   "private": true
 }
